--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>message for you</title>
-    <link rel="stylesheet" href="web.css"/>
+    <link rel="stylesheet" href="script.css"/>
 </head>
 <body>
     <div class="wrapper">
@@ -28,6 +28,6 @@
             <button class="no-btn">No</button>
         </div>
     </div>
-    <script src="web.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
